# ReceiptGate

./: .env.example  .gitignore  .mypy-ci.ini  Escalation Semantics.txt  Excellent. This is the right moment.txt  Mem_Test_Spec.md  README.md  RECEIPTGATE_V1_EXIT_CRITERIA.md  Receipt Protocol Golden.txt  ReceiptGate Reference Profile.txt  Schema fort receipt and escalation body.txt  Three_Layer_Storage_Architecture.md  pyproject.toml  receipts.put Contract.txt  run_local.ps1  run_local.sh
.github/workflows/: ci.yml
profiles/receiptgate/: README.md  policy.md  profile.yaml
profiles/receiptgate/api/: examples.http  namespaces.yaml
profiles/receiptgate/jobs/: build_receipt_embeddings.py  build_receipt_graph.py
profiles/receiptgate/schema/: 002_receipt_views.sql  003_receipt_graph.sql  004_receipt_embeddings.sql
schema/: 001_receipts.sql  005_receipts_v1.sql  receipt.schema.v1.json
scripts/: golden_path.py
src/receiptgate/: __init__.py  api.py  auth.py  config.py  db.py  errors.py  ledger_v1.py  main.py  middleware.py  models.py  principals.py  rate_limiter.py  receipts.py  security_middleware.py  utils.py  validation_v1.py
src/receiptgate/mcp/: routes.py
tests/: conftest.py  test_api.py  test_auth.py  test_ledger_v1.py  test_mcp.py  test_migrations.py  test_principals.py  test_rate_limiter.py  test_receipts.py  test_security_middleware.py  test_utils.py  test_validation_v1.py
