[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "receiptgate"
version = "0.1.0"
description = "Canonical receipt ledger for obligation truth (MemoryGate profile)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "HexyLab" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "psycopg>=3.1.18",
    "jsonschema>=4.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
receiptgate = "receiptgate.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/receiptgate"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
